// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FunctionViewer 1 - renders a function's data 1`] = `
<div
  className="flow_function__container"
>
  <div
    className="flow_function__header flow_function__header-pass"
    onClick={[Function]}
  >
    <h2>
      <span
        className="flow_function__header__id"
      >
        1
      </span>
      Verify if weekend
    </h2>
  </div>
  <div
    className="flow_function__body"
  >
    <div
      className="flow_function__body__next_group"
    >
      <div
        className="flow_function__body__next_pass"
      >
        <label
          htmlFor="flowPass_1"
        >
          Next if passed
        </label>
        <div
          className="flow_function__body__next"
          id="flowPass_1"
        >
          2
        </div>
      </div>
      <div
        className="flow_function__body__next_fail"
      >
        <label
          htmlFor="flowPass_1"
        >
          Next if failed
        </label>
        <div
          className="flow_function__body__next"
          id="flowPass_1"
        >
          5
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FunctionViewer 2 - renders a function's data when no more functions in chain 1`] = `
<div
  className="flow_function__container"
>
  <div
    className="flow_function__header flow_function__header-pass"
    onClick={[Function]}
  >
    <h2>
      <span
        className="flow_function__header__id"
      >
        2
      </span>
      Celebrate
    </h2>
  </div>
  <div
    className="flow_function__body"
  >
    <div
      className="flow_function__body__next_group"
    >
      <div
        className="flow_function__body__next_pass"
      >
        <label
          htmlFor="flowPass_2"
        >
          Next if passed
        </label>
        <div
          className="flow_function__body__next"
          id="flowPass_2"
        >
          End
        </div>
      </div>
      <div
        className="flow_function__body__next_fail"
      >
        <label
          htmlFor="flowPass_2"
        >
          Next if failed
        </label>
        <div
          className="flow_function__body__next"
          id="flowPass_2"
        >
          End
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FunctionViewer 3 - renders pass header properly 1`] = `
<div
  className="flow_function__container"
>
  <div
    className="flow_function__header flow_function__header-pass"
    onClick={[Function]}
  >
    <h2>
      <span
        className="flow_function__header__id"
      >
        2
      </span>
      Celebrate
    </h2>
  </div>
  <div
    className="flow_function__body"
  >
    <div
      className="flow_function__body__next_group"
    >
      <div
        className="flow_function__body__next_pass"
      >
        <label
          htmlFor="flowPass_2"
        >
          Next if passed
        </label>
        <div
          className="flow_function__body__next"
          id="flowPass_2"
        >
          End
        </div>
      </div>
      <div
        className="flow_function__body__next_fail"
      >
        <label
          htmlFor="flowPass_2"
        >
          Next if failed
        </label>
        <div
          className="flow_function__body__next"
          id="flowPass_2"
        >
          End
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FunctionViewer 4 - renders fail header properly 1`] = `
<div
  className="flow_function__container"
>
  <div
    className="flow_function__header flow_function__header-fail"
    onClick={[Function]}
  >
    <h2>
      <span
        className="flow_function__header__id"
      >
        2
      </span>
      Celebrate
    </h2>
  </div>
  <div
    className="flow_function__body"
  >
    <div
      className="flow_function__body__next_group"
    >
      <div
        className="flow_function__body__next_pass"
      >
        <label
          htmlFor="flowPass_2"
        >
          Next if passed
        </label>
        <div
          className="flow_function__body__next"
          id="flowPass_2"
        >
          End
        </div>
      </div>
      <div
        className="flow_function__body__next_fail"
      >
        <label
          htmlFor="flowPass_2"
        >
          Next if failed
        </label>
        <div
          className="flow_function__body__next"
          id="flowPass_2"
        >
          End
        </div>
      </div>
    </div>
  </div>
</div>
`;
